@@ -85,6 +85,7 @@ int main(void) {
 
   // Wait for completion
   clWaitForEvents(1, &event);
+  clReleaseEvent(event);
 
   // Example completed. See "clblast_c.h" for status codes (0 -> success).
   printf("Completed DGEMV with status %d\n", status);
